2011-07-04  NIIBE Yutaka  <gniibe@fsij.org>

	* ChibiOS_2.0.8/os/hal/platforms/STM32/adc_lld.h: Apply a patch of
	ADC from the branch of ChibiOS_2.0.X.

2011-06-15  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.13.
	* src/usb_desc.c (gnukStringSerial): Updated.

2011-06-08  NIIBE Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/include/polarssl/bn_mul.h [__arm__]
	(MULADDC_1024_CORE, MULADDC_1024_LOOP): New.
	* polarssl-0.14.0/library/bignum.c (mpi_mul_hlp): Use
	MULADDC_1024_LOOP.

2011-05-31  NIIBE Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/include/polarssl/bn_mul.h [__arm__]
	(MULADDC_HUIT, MULADDC_INIT, MULADDC_CORE, MULADDC_STOP): Tweak.

2011-05-27  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk_put_binary.py (main): Confirm Serial ID is written
	correctly.

	* src/openpgp.c (cmd_write_binary): Fix FILE_EF_SERIAL comparison.

	* src/gnuk.ld.in (.gnuk_random, .gnuk_ch_certificate): Put LONG to
	have CONTENTS.

	* polarssl-0.14.0/include/polarssl/bn_mul.h [__arm__]
	(MULADDC_HUIT): New.

2011-05-26  NIIBE Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/include/polarssl/bn_mul.h [__arm__]
	(MULADDC_INIT): Add ADDS instruction to clear of carry flag.
	(MULADDC_CORE): Tune to 6 instructions and less registers.
	(MULADDC_STOP): Add ADC instruction to save carry flag.

2011-05-25  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/hub_ctrl.py: New.  Port of original C implementation.

2011-05-16  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call flash_unlock at the beginning.
	(device_initialize_once): Don't call flash_unlock here.
	* src/flash.c (flash_init): Likewise.

	* src/openpgp.c (cmd_select_file): Don't use write_res_apdu.
	(set_res_apdu): Rename from write_res_apdu.  Just SW1 and SW2.

2011-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.12.

2011-05-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso, cmd_internal_authenticate)
	(cmd_update_binary, cmd_write_binary): Don't check pw locked.
